[tool.poetry]
name = "obamba"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"
youtube-dl = "^2021.3.14"
larousse-api-sunbro = "^0.0.5"
whapi = "^0.6.2"
wikipedia = "^1.4.0"
googletrans = "^3.0.0"
moviepy = "^1.0.3"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
